--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -3,75 +3,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="1">
-
-    <TextView
-        android:id="@+id/tvIsConnected"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="#FF0000"
-        android:textColor="#FFF"
-        android:textSize="18dp"
-        android:text="is connected? "
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+    android:weightSum="1"
+    android:background="#f898571d">
 
     <Spinner
         android:layout_width="155dp"
-        android:layout_height="wrap_content"
+        android:layout_height="90dp"
         android:id="@+id/spinner"
         android:entries="@array/sort"
         android:spinnerMode="dropdown"
-        android:layout_below="@+id/button"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:gravity="center"
         android:layout_toLeftOf="@+id/spinner2"
         android:layout_toStartOf="@+id/spinner2" />
 
     <Spinner
         android:layout_width="160dp"
-        android:layout_height="wrap_content"
+        android:layout_height="90dp"
         android:id="@+id/spinner2"
         android:entries="@array/semester"
         android:layout_gravity="right"
         android:spinnerMode="dropdown"
-        android:layout_below="@+id/button"
-        android:layout_alignRight="@+id/button"
-        android:layout_alignEnd="@+id/button" />
+        android:gravity="center"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
+        android:gravity="center"
         android:layout_width="75dp"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:text="Load"
+        android:textSize="22sp"
+        android:textStyle="bold"
         android:onClick="onClick"
         android:id="@+id/button"
+        android:background="@drawable/wood"
         android:layout_gravity="right"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <ListView
         android:id="@+id/list"
         android:layout_width="fill_parent"
-        android:layout_height="274dp"
+        android:layout_height="fill_parent"
         android:layout_weight="0.44"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/spinner"
-        android:layout_alignParentBottom="true" />
-    <!---
-    <EditText
-        android:id="@+id/etResponse"
-        android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        android:layout_weight="0.50"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_above="@+id/button"
+        android:background="@android:color/darker_gray" />
 
-        <requestFocus />
-    </EditText> -->
 </RelativeLayout>
