--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,5 +4,10 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
     </style>
+    <style name="spinner">
+        <item name="android:padding">10dp</item>
+        <item name="android:textSize">80sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
 
 </resources>
